-Felipphe Triviño'- Día 30-09-2013

--- a/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
@@ -304,12 +304,16 @@
                         <fieldset style="position: absolute; left: 5px; top: 410px; font-size: 11px; width: 835px; height: 70px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue"><strong>Clonar Concepto</strong></legend>
                             <h:outputText value="Código y Nombre del nuevo concepto:"  style="color: #14388B; font-weight: bold; position: absolute"/>
-                            <p:inputText value="#{controlConcepto.conceptoClon.codigo}" style="position: absolute; top: 35px; width: 55px;" />
-                            <p:inputText  value="#{controlConcepto.conceptoClon.descripcion}" style="position: absolute; top: 35px; left: 75px; width: 280px;" />
+                            <p:inputText id="codigoConceptoClon" value="#{controlConcepto.conceptoClon.codigo}" style="position: absolute; top: 35px; width: 55px;">
+                                <p:ajax event="change" update="@this"/>
+                            </p:inputText>
+                            <p:inputText id="descripcioConceptoClon" value="#{controlConcepto.conceptoClon.descripcion}" style="position: absolute; top: 35px; left: 75px; width: 280px;" >
+                            <p:ajax event="change" update="@this"/>
+                            </p:inputText>
                             <h:outputText value="Código y Nombre del concepto a clonar (Utilize lista de valores):"  style="color: #14388B; font-weight: bold; position: absolute; left: 380px"/>
                             <p:commandButton icon="ui-icon-transfer-e-w" actionListener="#{controlConcepto.lovConcepto(1)}"  style="position: absolute; top: 32px; left: 380px" process="@this"/>
                             <p:inputText id="descripcionClon" value="#{controlConcepto.conceptoOriginal.codigo} - #{controlConcepto.conceptoOriginal.descripcion}" style="position: absolute; top: 35px; left: 408px; width: 350px;"/>
-                            <p:commandButton value="[Clonar]" style="position: absolute; top: 13.5px; left: 776px; width: 70px; height: 60px" process="@this"/>
+                            <p:commandButton value="[Clonar]" actionListener="#{controlConcepto.clonarConcepto()}" style="position: absolute; top: 13.5px; left: 776px; width: 70px; height: 60px" process="@this"/>
                         </fieldset>
 
                         <p:commandButton style="position: absolute; left: 9px; top: 378px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="grupoConcepto" value="[Grupo Conceptos]" process="@this" />
@@ -320,7 +324,7 @@
 
                         <p:commandButton style="position: absolute; left: 717px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();"  process="@this" />
                         <p:commandButton style="position: absolute; left: 9px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlConcepto.refrescar()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 800px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlConcepto.refrescar()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 800px; top: 500px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlConcepto.refrescar()}" action="nomina" process="@this" />
                     </p:panel>
                 </h:form>
                 <h:form>
@@ -880,7 +884,8 @@
                         </p:column> 
 
                         <p:column headerText="Código_Alternativo">                                                 
-                            <f:facet name="header"> <h:outputText value="Código Alternativo" /></f:facet>
+                            <f:facet name="header"> <h:outputText value="Código Alternativo" />
+                            </f:facet>
                             <h:outputText value="#{info.codigoalternativo}" />
                         </p:column>
                     </p:dataTable>
