--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -416,7 +416,7 @@
 
                                     <hr style="float: left; height: 120px; position: absolute; left: 200px; top: 2px;"/>
 
-                                    <p:commandButton id="ConceptosNomina" value="" style="position: absolute; left: 255px; top: 15px; width: 95px; height: 95px;  background-image: url(Imagenes/nom_hojaconcepto.gif);  background-repeat: no-repeat; background-size: 100% 100%; "/>
+                                    <p:commandButton id="ConceptosNomina" value="" style="position: absolute; left: 255px; top: 15px; width: 95px; height: 95px;  background-image: url(Imagenes/nom_hojaconcepto.gif);  background-repeat: no-repeat; background-size: 100% 100%;" action="concepto"/>
 
                                     <hr style="float: left; height: 120px; position: absolute; left: 405px; top: 2px;"/>
 
