--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -420,7 +420,7 @@
 
                                     <hr style="float: left; height: 120px; position: absolute; left: 405px; top: 2px;"/>
 
-                                    <p:commandButton id="FormulasLiquidacion" value="" style="position: absolute; left: 465px; top: 15px; width: 95px; height: 95px;  background-image: url(Imagenes/nom_formulas.gif);  background-repeat: no-repeat; background-size: 100% 100%; "/>
+                                    <p:commandButton id="FormulasLiquidacion" value="" style="position: absolute; left: 465px; top: 15px; width: 95px; height: 95px;  background-image: url(Imagenes/nom_formulas.gif);  background-repeat: no-repeat; background-size: 100% 100%;" action="formula"/>
 
                                     <hr style="float: left; height: 120px; position: absolute; left: 615px; top: 2px;"/>
 
