--- a/DesignerRHN/DesignerRHN-war/web/PersonaEducacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PersonaEducacion.xhtml
@@ -38,7 +38,7 @@
                                             <p:calendar  style="font-size: 10px;" value="#{vigenciasFormales.fechavigencia}" id="editFecha"   styleClass="ui-datepicker, myClass"  
                                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy" autocomplete="true">                                         
                                                 <p:ajax event="dateSelect"  update="editFecha"/>
-                                                <p:ajax event="change" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasFormales(indice, 'N', vigenciasFormales.fechavigencia)}"/>/>
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndice(indice, 0)}" />
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </p:calendar>
@@ -124,6 +124,7 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{vigenciasFormales.calificacionobtenida}" id="editarCalificacion" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndice(indice, 5)}" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasFormales(indice, 'N', vigenciasFormales.calificacionobtenida)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -139,6 +140,7 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{vigenciasFormales.numerotarjeta}" id="editarNumeroTarjeta" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndice(indice, 6)}" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasFormales(indice, 'N', vigenciasFormales.numerotarjeta)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -160,7 +162,7 @@
                                             <p:calendar  style="font-size: 10px;" value="#{vigenciasFormales.fechaexpediciontarjeta}" id="editFechaExpedicion"   styleClass="ui-datepicker, myClass"  
                                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy" autocomplete="true">                                         
                                                 <p:ajax event="dateSelect"  update="editFechaExpedicion"/>
-                                                <p:ajax event="change" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasFormales(indice, 'N', vigenciasFormales.fechaexpediciontarjeta)}"/>
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndice(indice, 7)}" />
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </p:calendar>
@@ -183,7 +185,7 @@
                                             <p:calendar  style="font-size: 10px;" value="#{vigenciasFormales.fechavencimientotarjeta}" id="editFechaVencimiento"   styleClass="ui-datepicker, myClass"  
                                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy" autocomplete="true">                                         
                                                 <p:ajax event="dateSelect"  update="editFechaVencimiento"/>
-                                                <p:ajax event="change" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasFormales(indice, 'N', vigenciasFormales.fechavencimientotarjeta)}"/>
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndice(indice, 8)}" />
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </p:calendar>
@@ -199,8 +201,9 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{vigenciasFormales.observacion}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{vigenciasFormales.observacion}" id="editarObservacion" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
+                                            <p:inputText value="#{vigenciasFormales.observacion}" id="editarObservacion" maxlength="50" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndice(indice, 9)}" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasFormales(indice, 'N', vigenciasFormales.observacion)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -236,7 +239,7 @@
                                             <p:calendar  style="font-size: 10px;" value="#{vigenciasNoFormales.fechavigencia}" id="editFechaNF"   styleClass="ui-datepicker, myClass"  
                                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy" autocomplete="true">                                         
                                                 <p:ajax event="dateSelect"  update="editFechaNF"/>
-                                                <p:ajax event="change" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasNoFormales(indiceNF, 'N', vigenciasNoFormales.fechavigencia)}"/>
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndiceNF(indiceNF, 0)}" />
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </p:calendar>
@@ -271,6 +274,7 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{vigenciasNoFormales.titulo}" id="editarTituloNF" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndiceNF(indiceNF, 2)}" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasNoFormales(indiceNF, 'N', vigenciasNoFormales.titulo)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -322,6 +326,7 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{vigenciasNoFormales.calificacionobtenida}" id="editarCalificacionNF" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndiceNF(indiceNF, 5)}" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasNoFormales(indiceNF, 'N', vigenciasNoFormales.calificacionobtenida)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -335,8 +340,9 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{vigenciasNoFormales.observacion}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{vigenciasNoFormales.observacion}" id="editarObservacion" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
+                                            <p:inputText value="#{vigenciasNoFormales.observacion}" id="editarObservacion" maxlength="50" style="font-size: 10px; border-radius: 0px; width: 93.5%;text-transform: uppercase" > 
                                                 <p:ajax event="select" listener="#{controlPersonaEducacion.cambiarIndiceNF(indiceNF, 6)}" />
+                                                <p:ajax event="change" listener="#{controlPersonaEducacion.modificarVigenciasNoFormales(indiceNF, 'N', vigenciasNoFormales.observacion)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -398,7 +404,7 @@
                             </p:toolbarGroup>  
                         </p:toolbar>
 
-                        <p:commandButton style="position: absolute; left: 522px; top: 490px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosVigenciasFormalesPersona, :form:datosVigenciasNoFormalesPersona " process="@this" />
+                        <p:commandButton style="position: absolute; left: 522px; top: 490px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosVigenciasFormalesPersona" process="@this" />
                         <p:commandButton style="position: absolute; left: 15px; top: 490px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-refresh" id="REFRESCAR" value="Refrescar" actionListener="#{controlPersonaEducacion.cancelarModificacion()}" process="@this" />
                         <p:commandButton style="position: absolute; left: 605px; top: 490px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras" actionListener="#{controlPersonaEducacion.salir()}" action="nomina" process="@this" /> 
 
@@ -462,8 +468,10 @@
                             <p:watermark for="nuevaCalificacion" value="Calificacion" />
 
                             <strong><h:outputText value="No. Tarjeta Profesional:  "  style="font-size: 12px; position: absolute; top: 305px" /></strong>
-                            <p:inputText id="nuevoNumeroTarjeta" value="#{controlPersonaEducacion.nuevaVigenciaFormal.numerotarjeta}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 305px; text-transform: uppercase" onclick="select();">
+                            <p:inputText id="nuevoNumeroTarjeta"  value="#{controlPersonaEducacion.nuevaVigenciaFormal.numerotarjeta}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 305px; text-transform: uppercase" onclick="select();">
+                                
                                 <p:ajax event="change" update="nuevoNumeroTarjeta"/>
+                                
                             </p:inputText>
                             <p:watermark for="nuevoNumeroTarjeta" value="Numero Tarjeta" />
 
@@ -545,7 +553,7 @@
                             <p:watermark for="nuevaCalificacionNF" value="Calificacion" />
 
                             <strong><h:outputText value="Observacion: "  style="font-size: 12px; position: absolute; top: 305px" /></strong>
-                            <p:inputText id="nuevaObservacionNF" value="#{controlPersonaEducacion.nuevaVigenciaNoFormal.observacion}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 305px; text-transform: uppercase" onclick="select();">
+                            <p:inputText id="nuevaObservacionNF" value="#{controlPersonaEducacion.nuevaVigenciaNoFormal.observacion}" maxlength="50" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 305px; text-transform: uppercase" onclick="select();">
                                 <p:ajax event="change" update="nuevaObservacionNF"/>
                             </p:inputText>
                             <p:watermark for="nuevaObservacionNF" value="Observacion" />
@@ -565,7 +573,7 @@
                     <p:dialog id="confirmarGuardar" header="ATENCIÓN...!" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
                         <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
                         <h:outputText value="¿Desea guardar los cambios realizados?" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
-                        <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlPersonaEducacion.guardarCambiosVigenciasFormales()}" style="position: absolute; top: 60px; left: 215px" process="@this" />
+                        <p:commandButton value="Si" onclick="confirmarGuardar.hide();" actionListener="#{controlPersonaEducacion.guardarTodo()}" style="position: absolute; top: 60px; left: 215px" process="@this" />
                         <p:commandButton value="No" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 255px" process="@this" />
                         <p:commandButton value="Cancelar" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
                     </p:dialog>
